# keccakc

./: .gitignore  .gn  API.markdown  CMakeLists.txt  LICENSE.markdown  LICENSES  README.markdown  build.ninja  defs.ninja  keccak.h  keccak.h.in  tool_versions_nehalem-darwin.txt
gnconfig/toolchains/: clang.gni
keccak/: CMakeLists.txt  config.h
keccak/constructions/: shakewrap.c  sponge-api.c  sponge-api.c.in  sponge-helpers-impl.h  sponge-impl.h  sponge-ops.h  sponge-ops.h.in  sponge.c  sponge.h  sponge.h.in
keccak/fips202/: flags.h  sha3.c  sha3.c.in  sha3.h  sha3.template.c  sha3.template.h  shake.c  shake.c.in  shake.h  shake.template.c  shake.template.h
keccak/fips202/sha3/: sha3_224.c  sha3_224.h  sha3_256.c  sha3_256.h  sha3_384.c  sha3_384.h  sha3_512.c  sha3_512.h
keccak/fips202/shake/: README.markdown  shake128.c  shake128.h  shake256.c  shake256.h
keccak/keccak/: keccak-1600.h  keccakf-1600.h  keccakf.c  keccakp-1600.h  keccakp.c  rc-1600.h
keccak/rte/: check-impl.h  errors.h  rte.h
keccak/tests/: README.markdown  alignment-keccakf-mc.c  bench-sha3.c  bench-shake.c  helpers-impl.h  keccakf_mc.h  test-kats-input.h  test-kats.c  test-kats.h  test-sha3-exhaustive-impl.h  test-sha3-impl.h  test-sha3-sc.c  test-sha3.c  test-shake-impl.h  test0-sha3-224-kat.txt  test0-sha3-256-kat.txt  test0-sha3-384-kat.txt  test0-sha3-512-kat.txt  test0-sha3.c  test0-shake.c  test0_sha3_kats.h  test0_shake.txt  test0_shake_kats.h  test1_sha3_kat_input.h  test_keccakf_0.h
keccak/utils/: README.markdown  c11shim.h  print-impl.h  xorinto-impl.h  xorinto-unrolled.gen.h
(+124 files in other folders)
